--- a/Android/res/layout/replaycanvas.xml
+++ b/Android/res/layout/replaycanvas.xml
@@ -35,7 +35,7 @@
         android:gravity="center" >
 
         <EditText
-            android:id="@+id/EditText11"
+            android:id="@+id/char100"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="1"
@@ -44,44 +44,44 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText22"
+            android:id="@+id/char101"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText11"
+            android:layout_toRightOf="@+id/char100"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText12"
+            android:id="@+id/char102"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText22"
+            android:layout_toRightOf="@+id/char101"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText13"
+            android:id="@+id/char103"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText12"
+            android:layout_toRightOf="@+id/char102"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText10"
+            android:id="@+id/char104"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText13"
+            android:layout_toRightOf="@+id/char103"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -95,7 +95,7 @@
         android:gravity="center" >
 
         <EditText
-            android:id="@+id/EditText09"
+            android:id="@+id/char0"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="1"
@@ -105,11 +105,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText04"
+            android:id="@+id/char1"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText09"
+            android:layout_toRightOf="@+id/char0"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -117,11 +117,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText01"
+            android:id="@+id/char2"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText04"
+            android:layout_toRightOf="@+id/char1"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -129,11 +129,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText02"
+            android:id="@+id/char3"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText01"
+            android:layout_toRightOf="@+id/char2"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -141,11 +141,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText08"
+            android:id="@+id/char4"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText02"
+            android:layout_toRightOf="@+id/char3"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -153,11 +153,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText06"
+            android:id="@+id/char5"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText08"
+            android:layout_toRightOf="@+id/char4"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -165,11 +165,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText07"
+            android:id="@+id/char6"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText06"
+            android:layout_toRightOf="@+id/char5"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -177,11 +177,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText03"
+            android:id="@+id/char7"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText07"
+            android:layout_toRightOf="@+id/char6"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -195,7 +195,7 @@
         android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:gravity="center">
 
         <EditText
-            android:id="@+id/EditText14"
+            android:id="@+id/char8"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="1"
@@ -207,11 +207,11 @@
         </EditText>
 
         <EditText
-            android:id="@+id/EditText18"
+            android:id="@+id/char9"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText14"
+            android:layout_toRightOf="@+id/char8"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -219,11 +219,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText20"
+            android:id="@+id/char10"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText18"
+            android:layout_toRightOf="@+id/char9"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -231,11 +231,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText19"
+            android:id="@+id/char11"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText20"
+            android:layout_toRightOf="@+id/char10"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -243,11 +243,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText05"
+            android:id="@+id/char12"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText19"
+            android:layout_toRightOf="@+id/char11"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -255,11 +255,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText15"
+            android:id="@+id/char13"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText05"
+            android:layout_toRightOf="@+id/char12"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -267,11 +267,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText16"
+            android:id="@+id/char14"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText15"
+            android:layout_toRightOf="@+id/char13"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
@@ -279,11 +279,11 @@
             android:width="35dp" android:focusable="false"/>
 
         <EditText
-            android:id="@+id/EditText17"
+            android:id="@+id/char15"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/EditText16"
+            android:layout_toRightOf="@+id/char14"
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
